2.78 (unreleased)
-----------------

- Nothing changed yet.


2.77 (2018-09-01)
-----------------

- Bump geotool db api to bring in string conversion fix.


2.76 (2018-09-01)
-----------------

- Bump geotool db api to bring in sql fix.


2.75 (2018-09-01)
-----------------

- Fix bug in the updating of battery levels.


2.74 (2018-09-01)
-----------------

- Add logging instantiation to mqrecv-event so that we can see the sql statements when in debug mode.
- Bump geotool db lib to bring in logging change.


2.73 (2018-09-01)
-----------------

- Fixup the pool creation on async db clients clients. Now creating one pool per main loop in the mqrecv processors.
- Add new DigitalReport and AnaloguePinReport classes to aid in the logging of io status.
- Fix bug in the handling of datetime objects in the async db process for io pin handling.
- Add ability for battery updates to be processed through the message queue interface.
- Bump geotool db to 1.6 for io and battery changes.
- Bump geotool api to 1.23 for io and battery api changes.


2.72 (2018-09-01)
-----------------

- Add separate class for handling second stage of firmware update process.
- Add logic to determine if device is in firmware update on connect (receiving a FC0).
- Add ability to send C01 command to meitrack clients.
- Add command to set device pin states.
- Add login command to meitrackchatclient.
- Add argument to force a login on connect with the meitrack chat client.
- Add master protocol function for set_pin.
- Add celery task for set_pin from ui.


2.71 (2018-08-19)
-----------------

- Make event reporting generic so can be used outside of the meitrack chat client class.
- Add more logging to indicate outgoing messages to a device in the event log.
- Add ability to set debug mode from the ui.
- Add debug mode which will log all data to the debug log api when turned on. Defaults off at time of device connection.


2.70 (2018-08-12)
-----------------
