@@ -12,6 +12,8 @@ import json
 import datetime
 import os
 
+import pytz
+
 from geotool_db_api.battery_api import get_update_battery_coroutine
 from geotool_db_api.common import create_pool_a
 from geotool_db_api.device_api import get_device_id
@@ -57,6 +59,10 @@ async def main_event(loop):
             if "." not in data["log_time"]:
                 data["log_time"] = "{}.0".format(data["log_time"])
             log_time = datetime.datetime.strptime(data["log_time"], "%Y-%m-%d %H:%M:%S.%f")
+
+            log_time = pytz.utc.localize(log_time)
+            timestamp = pytz.utc.localize(timestamp)
+
             if device_id:
                 loop.create_task(get_insert_eventlog_coroutine(
                     device_id, timestamp, data["event_description"], str(data["event_type"]), log_time,
@@ -100,6 +106,7 @@ async def main_analogue_io(loop):
                 if '.' not in data["timestamp"]:
                     data["timestamp"] = "{}.0".format(data["timestamp"])
                 timestamp = datetime.datetime.strptime(data["timestamp"], "%Y-%m-%d %H:%M:%S.%f")
+                timestamp = pytz.utc.localize(timestamp)
                 insert_coroutine = get_insert_analogue_io_coroutine(
                     device_id,
                     int(data.get("pin")),
@@ -149,6 +156,7 @@ async def main_digital_io(loop):
                 if '.' not in data["timestamp"]:
                     data["timestamp"] = "{}.0".format(data["timestamp"])
                 timestamp = datetime.datetime.strptime(data["timestamp"], "%Y-%m-%d %H:%M:%S.%f")
+                timestamp = pytz.utc.localize(timestamp)
                 insert_coroutine = get_insert_digital_io_coroutine(
                     device_id,
                     int(data.get("pin")),
