@@ -29,7 +29,7 @@ def on_message(client, userdata, msg):
         camera_number = fields[4]
         filename = fields[5]
         device = device_api.get_device_pk(imei)
-        camera_api.add_camera_image(device, camera_number, datetime.datetime.now(), msg.payload)
+        camera_api.add_camera_image(device, camera_number, datetime.datetime.utcnow(), msg.payload)
     if "new_location" in msg.topic:
         imei = fields[2].rstrip().lstrip()
         data_record = json.loads(msg.payload)
@@ -55,8 +55,8 @@ def on_message(client, userdata, msg):
             data_record["accuracy"],
             age_gps_data,
             data_record.get("num_sats"),
-            datetime.datetime.now(),
-            datetime.datetime.now(),
+            datetime.datetime.utcnow(),
+            datetime.datetime.utcnow(),
         )
 
 
